--- a/chart/templates/web-deploy.yaml
+++ b/chart/templates/web-deploy.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: {{ .Values.web.appname }}
-        #image: {{ .Values.web.repo}}/{{ .Values.web.image }}:{{ .Values.web.tag }}
-        image: nginx
+        image: {{ .Values.web.repo}}/{{ .Values.web.image }}:{{ .Values.web.tag }}
+        #image: nginx
         ports:
         - containerPort: {{ .Values.web.port }}
